traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:18: error: reassignment to val
      y=y+1
       ^TraversalByColumn:21: error: reassignment to val
      y=0
       ^TraversalByColumn:22: error: reassignment to val
      x=x+1
       ^